hphp/hack/test/typecheck/expression_trees/bound_variable_lambda.php.like_types.exp
File "bound_variable_lambda.php", line 6, characters 13-48:
Typing error (Typing[4110])
  File "bound_variable_lambda.php", line 6, characters 13-48:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "bound_variable_lambda.php", line 7, characters 10-10:
Typing error (Typing[4110])
  File "bound_variable_lambda.php", line 7, characters 10-10:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "bound_variable_lambda.php", line 8, characters 10-10:
Typing error (Typing[4110])
  File "bound_variable_lambda.php", line 8, characters 10-10:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
