hphp/hack/test/typecheck/expression_trees/bound_variable_lambda.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  $_ = Code`() ==> {
    $x = 1;
    $x + 1;
  }`;
}
